-design upload popup, css -fix big img popup alignment

--- a/resource/theme/default/css/default.css
+++ b/resource/theme/default/css/default.css
@@ -7,6 +7,11 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+/* Change the white to any color ;) */
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
 html {
 	height: 100%;
     padding: 0px;
@@ -236,6 +241,7 @@ div.error {
     width:90%;
     min-width: 380px;
     max-width: 1024px;
+    margin-top: 20px;
     margin-bottom: 70px;
 }
 
@@ -324,8 +330,8 @@ div.error {
 
 .baseLayer .mainBox {
 
-    margin-top:20px;
-    margin-bottom: 20px;
+    margin-top:50px;
+    margin-bottom: 50px;
     background-color: #f9f9f9;
 
     /*make div center, cooperate with parent*/
@@ -566,20 +572,33 @@ div.error {
 
 
 .genericPopup .popup_upload #uploadDropbox {
+    min-height: 200px;
     margin: 0px 30px 0px 30px;
     border: dashed 5px #aaaaaa;
-    min-height: 200px;
     background-color: #eaeaea;
 }
 
-.genericPopup .popup_upload #uploadDropbox #imgSection {
+.genericPopup .popup_upload #uploadDropbox #myDropzone {
+    height: 100%;
+    min-height: 200px;
     text-align: justify;
-    background-color: #fcff50;
+    border: 0px;
+    background-color: #ffffff;
+    text-align: justify;
+
+    display: flex;
+    align-items: center;
+    justify-content: left;
 }
 
-.genericPopup .popup_upload #uploadDropbox #textSection {
-    background-color: #2cc36b;
+.genericPopup .popup_upload #uploadDropbox #myDropzone .dz-message {
+    font-size: 21px;
+    padding: 0px;
+    margin:0px;
+    vertical-align: middle;
+    width: 100%;
 }
+
 
 .genericPopup .popup_upload #btnSection {
     margin: 10px 30px 30px 30px;
